fix: 底部overflow visible，增加title container

--- a/packages/activity-panel/src/browser/activity-panel.less
+++ b/packages/activity-panel/src/browser/activity-panel.less
@@ -34,6 +34,9 @@
     overflow: visible;
     z-index: 1001;
   }
+  .bottom-side-panel {
+    min-height: 0;
+  }
 }
 .expansion-collapse {
   &:before {
